--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <!-- LINK VUE.JS -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.global.min.js"></script>
 
+    <!-- link AXIOS -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <!-- LINK JAVASCRIPT -->
     <script type="text/javascript" src="./main.js" defer></script>
   </head>
